--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <title>Lista cognomi</title>
   </head>
   <body>
-
+    <h1 id="surname">
       
+    </h1>
+    <h2 id="list-surname">
+      
+    </h2>
     <script src="./js/main.js" charset="utf-8"></script>
   </body>
 </html>
